--- a/android/res/menu/back_to_end.xml
+++ b/android/res/menu/back_to_end.xml
@@ -6,5 +6,5 @@
         android:id="@+id/back_to_end"
         android:title="Back To End Page"
         android:icon="@drawable/back_to_end"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 </menu>
