end page layout and score system update

--- a/android/res/layout/activity_end.xml
+++ b/android/res/layout/activity_end.xml
@@ -17,14 +17,41 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
+    <RelativeLayout
+        android:id="@+id/rule_numbers"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_below="@id/end_hint"
+        android:layout_marginLeft="280dp"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/gold"
+            android:background="@drawable/gold" />
+        <TextView
+            android:id="@+id/gold_text"
+            android:text="x"
+            android:textSize="25dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf= "@id/gold"
+            android:layout_marginLeft="10dp"
+            android:layout_centerVertical="true"/>
+
+    </RelativeLayout>
+
     <Button
         android:id="@+id/end_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Finish"
-        android:layout_below="@id/end_hint"
+        android:layout_below="@id/rule_numbers"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginTop="20dp"/>
 
     <ImageButton
         android:src="@android:drawable/btn_star_big_on"
